#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh_backend_core"
version = "0.5.0-beta.3"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com>",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"


[dependencies]
zenoh = { version = "0.5.0-beta.3", path = "../../zenoh" }
async-trait = "0.1"

[dependencies.async-std]
version = "=1.6.5"
features = ["unstable"]
