#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh_backend_influxdb"
version = "0.5.0-beta.5"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>",
           "Olivier Hécart <olivier.hecart@adlinktech.com>",
		   "Luca Cominardi <luca.cominardi@adlinktech.com>"]
edition = "2018"

[lib]
name = "zbackend_influxdb"
crate-type = ["cdylib"]

[dependencies]
zenoh_backend_traits = { version = "0.5.0-beta.5", path = "../traits" }
zenoh = { version = "0.5.0-beta.5", path = "../../zenoh" }
zenoh-util = { version = "0.5.0-beta.5", path = "../../zenoh-util" }
async-trait = "0.1"
lazy_static = "1.4.0"
regex = "1"
env_logger = "0.7.1"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influxdb = "0.3"

[dependencies.async-std]
version = "=1.6.5"
features = ["unstable"]
