#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
rust-version = "1.65.0"
name = "nostd-check"
version = "0.1.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = [
  "Davide Della Giustina <davide.dellagiustina@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Internal crate for zenoh."

[dependencies]
getrandom = { version = "0.2.8", features = ["custom"] }
linked_list_allocator = "0.10.4" # Needs nightly toolchain
zenoh-buffers = { path = "../../commons/zenoh-buffers/" }
zenoh-codec = { path = "../../commons/zenoh-codec/", default-features = false }
zenoh-protocol = { path = "../../commons/zenoh-protocol/", default-features = false }

[[bin]]
name = "nostd_check"
path = "src/bin/nostd_check.rs"
