#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
#
[package]
name = "zenoh-buffers"
version = "0.6.0-dev.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = [
	"kydos <angelo@icorsaro.net>",
	"Julien Enoch <julien@enoch.fr>",
	"Olivier Hécart <olivier.hecart@adlinktech.com>",
	"Luca Cominardi <luca.cominardi@adlinktech.com>",
	"Pierre Avital <pierre.avital@adlinktech.com>",
]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Internal crate for zenoh."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
shared-memory = ["shared_memory", "serde", "log", "bincode"]

[dependencies]
zenoh-core = { path = "../zenoh-core/" }
zenoh-collections = { path = "../zenoh-collections/" }

async-std = { version = "=1.11.0", default-features = false }
bincode = { version = "1.3.1", optional = true }
hex = "0.4.2"
log = { version = "0.4", optional = true }
serde = { version = "1.0.123", optional = true }
shared_memory = { version = "=0.12.0", optional = true }
