#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
rust-version = "1.62.1"
name = "zenoh-buffers"
version = "0.6.0-beta.1"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = [
	"kydos <angelo@icorsaro.net>",
	"Julien Enoch <julien@enoch.fr>",
	"Olivier Hécart <olivier.hecart@zettascale.tech>",
	"Luca Cominardi <luca.cominardi@zettascale.tech>",
	"Pierre Avital <pierre.avital@zettascale.tech>",
]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Internal crate for zenoh."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
shared-memory = ["shared_memory", "serde", "log", "bincode"]

[dependencies]
bincode = { version = "1.3.3", optional = true }
log = { version = "0.4.17", optional = true }
rand = "0.8.5"
serde = { version = "1.0.145", optional = true }
shared_memory = { version = "=0.12.4", optional = true }
zenoh-collections = { version = "0.6.0-beta.1", path = "../zenoh-collections/" }
zenoh-core = { version = "0.6.0-beta.1", path = "../zenoh-core/" }
zenoh-sync = { version = "0.6.0-beta.1", path = "../zenoh-sync/" }
