#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
rust-version = "1.62.1"
name = "zenoh-codec"
version = "0.6.0-beta.1"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = [
	"kydos <angelo@icorsaro.net>",
	"Luca Cominardi <luca.cominardi@zettascale.tech>",
	"Pierre Avital <pierre.avital@zettascale.tech>",
]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Internal crate for zenoh."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
shared-memory = ["zenoh-buffers/shared-memory", "zenoh-protocol/shared-memory"]
complete_n = ["zenoh-protocol/complete_n"]

[dependencies]
rand = "0.8.5"
uhlc = "0.5.1"
zenoh-buffers = { version = "0.6.0-beta.1", path = "../zenoh-buffers/" }
zenoh-core = { version = "0.6.0-beta.1", path = "../zenoh-core/" }
zenoh-protocol = { version = "0.6.0-beta.1", path = "../zenoh-protocol/" }


[dev-dependencies]
criterion = "0.4.0"
uuid = { version = "1.1.2", features = ["v4"] }

[[bench]]
name = "codec"
harness = false
