#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
rust-version = { workspace = true }
name = "zenoh-codec"
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = [
	"kydos <angelo@icorsaro.net>",
	"Luca Cominardi <luca.cominardi@zettascale.tech>",
	"Pierre Avital <pierre.avital@zettascale.tech>",
]
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
description = "Internal crate for zenoh."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "tracing",
    "uhlc/std",
    "zenoh-protocol/std",
    "zenoh-buffers/std"
]
shared-memory = [
    "std",
    "zenoh-shm",
    "zenoh-protocol/shared-memory",
    "zenoh-buffers/shared-memory"
]

[dependencies]
tracing = {workspace = true, optional = true }
uhlc = { workspace = true }
zenoh-buffers = { workspace = true, default-features = false }
zenoh-protocol = { workspace = true }
zenoh-shm = { workspace = true, optional = true }

# INFO: May cause problems when testing no_std stuff. Check this tool: https://docs.rs/crate/cargo-no-dev-deps/0.1.0
[dev-dependencies]
criterion = { workspace = true }

rand = { workspace = true, features = ["default"] }
zenoh-protocol = { workspace = true, features = ["test"] }
zenoh-util = {workspace = true }

[[bench]]
name = "codec"
harness = false
