#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors = [
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Pierre Avital <pierre.avital@zettascale.tech>",
  "kydos <angelo@icorsaro.net>",
]
categories = { workspace = true }
description = "Internal crate for zenoh."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-codec"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
shared-memory = [
  "std",
  "zenoh-buffers/shared-memory",
  "zenoh-protocol/shared-memory",
  "zenoh-shm",
]
std = ["tracing", "uhlc/std", "zenoh-buffers/std", "zenoh-protocol/std"]

[dependencies]
tracing = { workspace = true, optional = true }
uhlc = { workspace = true }
zenoh-buffers = { workspace = true, default-features = false }
zenoh-protocol = { workspace = true }
zenoh-shm = { workspace = true, optional = true }

# INFO: May cause problems when testing no_std stuff. Check this tool: https://docs.rs/crate/cargo-no-dev-deps/0.1.0
[dev-dependencies]
criterion = { workspace = true }

rand = { workspace = true, features = ["default"] }
zenoh-protocol = { workspace = true, features = ["test"] }
zenoh-util = { workspace = true }

[[bench]]
harness = false
name = "codec"
