#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-collections"
version = "0.6.0-dev.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
authors = [
	"kydos <angelo@icorsaro.net>",
	"Luca Cominardi <luca.cominardi@zettascale.tech>",
	"Pierre Avital <pierre.avital@zettascale.tech>",
]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Internal crate for zenoh."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-core = { path = "../zenoh-core/" }
zenoh-sync = { path = "../zenoh-sync/" }
async-trait = "0.1.42"
async-std = { version = "=1.12.0", features = ["unstable"] }
flume = "0.10.5"
log = "0.4.14"
