#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
rust-version = { workspace = true }
name = "zenoh-compression"
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = [
    "Darius Maitia <darius.maitia@zettascale.tech>",
	"kydos <angelo@icorsaro.net>",
	"Luca Cominardi <luca.cominardi@zettascale.tech>",
]
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
description = "Internal crate for zenoh."

[features]
default = ["std"]
std = [
    "uhlc/std",
]
shared-memory = [
    "std",
]
defmt = [
    "zenoh-buffers/defmt",
]

[dependencies]
lz4_flex = "0.10.0"
log = { workspace = true }
uhlc = { workspace = true, default-features = false }
rand = { workspace = true }
zenoh-buffers = { path = "../zenoh-buffers/", default-features = false }
zenoh-codec = { path = "../zenoh-codec/", default-features = false }
zenoh-crypto = { path = "../zenoh-crypto", default-features = false }

[dev-dependencies]
criterion = { workspace = true, features = [ "html_reports" ] }
zenoh-protocol = { path = "../zenoh-protocol/", features = ["test"] }

[[bench]]
name = "compress"
harness = false
