#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors = { workspace = true }
categories = { workspace = true }
description = "Internal crate for zenoh."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-config"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
internal = []
transport_tcp = []
unstable = ["zenoh-protocol/unstable"]

[dependencies]
json5 = { workspace = true }
nonempty-collections = { workspace = true }
num_cpus = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
uhlc = { workspace = true }
validated_struct = { workspace = true, features = ["json5", "json_get"] }
zenoh-core = { workspace = true }
zenoh-keyexpr = { workspace = true }
zenoh-macros = { workspace = true }
zenoh-protocol = { workspace = true }
zenoh-result = { workspace = true }
zenoh-util = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing"]
