#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
authors = [
  "Luca Cominardi <luca.cominardi@zettascale.tech>",
  "Pierre Avital <pierre.avital@zettascale.tech>",
  "kydos <angelo@icorsaro.net>",
]
categories = { workspace = true }
description = "Internal crate for zenoh."
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "zenoh-core"
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = []
tracing-instrument = ["zenoh-runtime/tracing-instrument"]

[dependencies]
lazy_static = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
zenoh-result = { workspace = true }
zenoh-runtime = { workspace = true }
